--- a/index.html
+++ b/index.html
@@ -54,5 +54,288 @@
             </ul>
         </div>
     </div>
+    <div class="slider">
+        <img class="slider-img" src="./img/Hyundai Tucson 2022 - 11 - Copy.jfif" alt="">
+    </div>
+    <div class="content">
+        <div class="content-1 grid wide">
+            <h1 class="content-heading">FAST MOTOR</h1>
+            <div class="content-sub-heading">Ở đây chúng tôi luôn có dịch vụ tốt nhất cho các bạn!</div>
+            <div class="content-list-service row">
+                <div class="content-list-service-item col c-4">
+                    <div class="content-list-service-icon">
+                        <div class="ti-money"></div>
+                    </div>
+                    <div class="content-list-service-text">Yêu cầu báo giá</div>
+                </div>
+                <div class="content-list-service-item col c-4">
+                    <div class="content-list-service-icon">
+                        <i class="fa-solid fa-calculator"></i>
+                    </div>
+                    <div class="content-list-service-text">Thủ tục trả góp</div>
+                </div>
+                <div class="content-list-service-item col c-4">
+                    <div class="content-list-service-icon">
+                        <i class="fa-solid fa-car"></i>
+                    </div>
+                    <div class="content-list-service-text">Bảng giá xe</div>
+                </div>
+            </div>
+        </div>
+        <div class="content-2 grid wide">
+             <h1 class="content-heading-list">Danh mục sản phẩm</h1>  
+            <div class="content-list-car row">
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+                <div class="content-list-car-item col c-3">
+                    <div class="content-car-img-box">
+                        <img src="./img/hyundai-creta-2060584j31714.webp" alt="" class="content-car-img">
+                    </div>
+                    <div class="content-car-text-box">
+                        <div class="content-car-name">HYUNDAI CRETA</div>
+                        <div class="content-car-price">Giá từ:
+                            <a href=""> 620.000.000 vnd</a>
+                        </div>
+                    </div>
+                    <button class="content-car-button">Mua ngay</button>
+                </div>
+            </div>
+        </div>
+        <div class="content-3">
+            <div class="content-box">
+                <h1 class="content-preorder-heading">Đăng kí đặt xe trước</h1>
+                <div class="content-preorder">
+                    <div class="content-preorder-box-input">
+                        <div class="row">
+                            <div class="content-preorder-box-input col c-6">
+                                <input placeholder="Họ tên" type="text" name="" id="" class="mt-12 content-preorder-name">
+                            </div>
+                            <div class="content-preorder-box-input col c-6">
+                                <input placeholder="Số điện thoại" type="text" name="" id="" class="mt-12 content-preorder-phone">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="content-preorder-box-input col c-12">
+                                <input placeholder="Gmail" type="email" name="" id="" class="mt-12 content-preorder-mail">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="content-preorder-box-input col c-12">
+                               <input placeholder="Nhập dòng xe đặt trước" type="text" name="" id="" class="mt-12 content-preorder-name-car">
+                            </div>
+                        </div>
+                    </div>
+                    <button class="content-preorder-btn mt-12">Đăng kí ngay</button>
+
+                    <div class="clear"></div>
+                </div>
+               
+        </div>
+        </div>
+    </div>
+    <img src="./img/Screenshot 2022-09-24 230211.png" alt="" class="map">
+    <footer class="footer">
+        <div class="grid wide footer__content">
+            <div class="row">
+                <div class="col c-3">
+                    <h3 class="footer__heading">Sản phẩm</h3>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Xe du lịch</a>
+                        </li>
+                        <li class="footer__list-item">    
+                            <a href="" class="footer__list-link">Xe SUV</a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Xe chuyên dụng, tải nhẹ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col c-3">
+                    <h3 class="footer__heading">Dịch vụ</h3>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">Phụ tùng & Phụ kiện chính hãng</a>
+                        </li>
+                        <li class="footer__list-item">   
+                            <a href="" class="footer__list-link">Chăm sóc khách hàng</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col c-3">
+                    <h3 class="footer__heading">Theo dõi</h3>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">
+                                <i class="footer__item-icon fa-brands fa-facebook"></i>
+                                Facebook
+                            </a>
+                        </li>
+                        <li class="footer__list-item">
+                            <a href="" class="footer__list-link">
+                                <i class="footer__item-icon fa-brands fa-square-instagram"></i>
+                                Instargram
+                            </a>
+                        </li>
+                        <li class="footer__list-item">    
+                            <a href="" class="footer__list-link">
+                                <i class="footer__item-icon fa-brands fa-linkedin"></i>
+                                Linkedin
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col c-3">
+                    <h3 class="footer__heading">Mua xe trên ứng dụng</h3>
+                    <div class="footer__download">
+                        <img src="./img/qr_code.png" alt="Download QR" class="footer__download-qr">
+                        <div class="footer__download-apps">
+                            <a href="" class="footer__download-apps-link">
+                                <img src="./img/gg_play.png" alt="Google Play" class="footer__download-app-img">
+                            </a>
+                            <a href="" class="footer__download-apps-link">
+                                <img src="./img/app_store.png" alt="App store" class="footer__download-app-img">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bottom">
+            <div class="grid wide">
+                <p class="footer__text">©2022 Bản quyền thuộc về Hiếu pro</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
